fixed scrollbar push

--- a/ui/scss/component/_navigation.scss
+++ b/ui/scss/component/_navigation.scss
@@ -196,6 +196,10 @@
   list-style: none;
 }
 
+.navigation-inner-container {
+  width: var(--side-nav-width);
+}
+
 .navigation-links--micro {
   .icon {
     height: 1.5rem;
